# RPG

./: #main.cpp#  .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  CMakeSettings.json  README.md  RPG.cbp  SDL_FontCache.c  SQLite_dialogue.h  SQLite_item_data.h  SQLite_spritesheets.h  SQLite_unit_data.h  TODO  TestGame_0.sln  action_components.h  ai_components.h  ai_control.h  base_structs.h  bd  bd_Clion  br  br_Clion  camera.h  character_data.h  character_stats.h  classes.h  collision.h  combat_control.h  compile_commands.json  components.h  create_entities.h  damage_text.h  db.h  death_control.h  death_spells.h  debugWithEmacs  debug_components.h  debug_system.h  dynamic_quad_tree.h  (+62 more)
src/: CMakeLists.txt  main.cpp
src/Audio/: CMakeLists.txt  audio.h  effects.h  init.h  music.h
src/Components/: CMakeLists.txt  action_components.h  body_components.h  building_components.h  classes.h  collision_components.h  components.h  item_components.h  movement_components.h  player_components.h  rendering_components.h  skills_Components.h  spell_components.h
src/Debug/: CMakeLists.txt  debug_components.h  debug_system.h
src/Environment/: CMakeLists.txt  fog.h
src/Game/: #load_object_list.h#  #main_menu.h#  .#game_loop.h  CMakeLists.txt  char_create.h  character_create.h  character_options.h  close.h  dynamic_entity_loader.h  gameLoop.h  game_loop.h  game_objects.h  init.h  load_object_list.h  load_zone.h  main_menu.h  settings.h  splash_screen.h
src/Game/Game_Start/: character_create.h  character_options.h  create_character_entity.h
src/Graphics/: #graphics.h#  #texture_packer.h#  .#texture_packer.h  CMakeLists.txt  FLARE_frames.h  PVG_frames.h  blood.h  blood.h~  colors.h  combat_graphics.h  frame_rendering.h  graphics.h  icons.h  portaits.h  portraits.h  render_iso_tiles.h  rendering.h  rendering_components.h  rendering_functions.h  shadow_casting.h  sprite_parser.h  sprite_sheets.h  sprites.h  spritesheet_structs.h  texture_packer.h  texture_packer_item.h  textures.h
src/Graphics/Rendering/: cox_rendering.h  frame_rendering.h  rendering.h  rendering_functions.h  sort.h
src/Graphics/Rendering_Components/: rendering_functions.h
src/Graphics/XML_Parsers/: spritesheet_structs.h  texture_data.h  texture_packer.h  texture_packer_item.h
src/Input/: #movement.h#  CMakeLists.txt  camera.h  event_handler.h  hotbar.h  hotbar_structs.h  input_control.h  joystick.h  mouse_control.h  mouse_data.h  movement-unused.h  movement.cpp  movement.h  pause.h  player_control.h
src/Input/Movement/: movement.h  movement_functions.h
src/Maps/: CMakeLists.txt  cave.h  isometric.h  map.h  pathing.h  procedural_generator.h  scene.h  world.h
src/Maps/Fog_Of_War/: fog_of_war.h
src/Maps/Lighting/: lighting.h  line_of_sight.h  shadows.h
src/Maps/Pathing/: a_star.h  pathing.h  pathing_map.h
src/Maps/Procedural_Generation/: labyrinth.h  number_generator.h  simplex_noise.h
src/Maps/World/: cave.h  dynamic_entity_loader.h  map.h  scene.h  town.h  world.h  world_data.h  world_grid.h  world_update.h
src/Objects/: CMakeLists.txt  action_components.h  ai_control.h  building.h  character_data.h  character_stats.h  collision.h  combat_control.h  create_entities.h  death_control.h  death_spells.h  dialogue.h  entity_control.h  entity_data.h  equip_player_start.h  equip_unit.h  equipment.h  formation_collisions.h  info.h  item_components.h  items.h  load_zone.h  mounts.h  recruitable_units.h  skills.h  social_control.h  spells.h  squad.h  squad_control.h  unit_control.h  unit_formations.h  unit_positions.h  unit_status.h
src/Objects/Buildings/: building.h  building_functions.h  orc.h
src/Objects/Collision/: collision.h  collision_load.h  formation_collisions.h
src/Objects/Combat/: combat_control.h  death_control.h
src/Objects/Components/: CMakeLists.txt  item_components.h
src/Objects/Items/: equip_player_start.h  equip_unit.h  equipment.h  items.h
src/Objects/Movement/: formation_positions.h
src/Objects/Social/: social_control.h
src/Objects/Stats/: character_data.h  character_stats.h  entity_data.h  info.h  unit_status.h
src/Objects/equip_unit/: CMakeLists.txt  equip_player_start.h
src/Objects/object_components/: CMakeLists.txt  action_components.h  action_components.h~  item_components.h  item_components.h~
src/Objects/unit_control/: #create_entities.h#  CMakeLists.txt  ai_control.h  collision.h  combat_control.h  create_entities.h  death_control.h  dialogue.h  entity_control.h  formation_collisions.h  formation_positions.h  mounts.h  mouse_control.h  social_control.h  squad.h  squad_control.h  unit_control.h  unit_formations.h  unit_positions.h
src/SQLite/: CMakeLists.txt  SQLite_dialogue.h  SQLite_insert.h  SQLite_item_data.h  SQLite_load_tileset.h  SQLite_objects_retrieve.h  SQLite_spell_data.h  SQLite_spritesheets.h  SQLite_unit_data.h  db.h
src/Skills/: CMakeLists.txt
src/Skills/General/: bartering.h  fitness.h  traveling.h
src/Sounds/: CMakeLists.txt  combat_sounds.h
src/Spells/: .#instant_attack.h  CMakeLists.txt  death_spells.h  instant_attack.h  sinister_strike.h  skills.h  spell_data.h  spells.h  update_spells.h
src/Spells/Air/: smoke.h
src/Spells/Arcane/: arcane.h
src/Spells/Archery/: attack.h
src/Spells/Bard/: auras.h  garlic.h  might.h
src/Spells/Earth/: earth.h
src/Spells/Fire/: CMakeLists.txt  dragon_breath.h  fire.h  fire_ball.h  fire_bolt.h
src/UI/: #interface.h#  #ui_unit_control.h#  .#ui_unit_control.h  CMakeLists.txt  damage_text.h  game_menu.h  interface.h  loot_panel.h  menu.h  menu_options.h  spellbook.h  text_box.h  tooltip.h  tooltips.h  ui.h  ui_XP.h  ui_actionbar.h  ui_debug.h  ui_elements.h  ui_frames.h  ui_frames.h~  ui_gameloop_function_times.h  ui_highlight.h  ui_info.h  ui_minimap.h  ui_resources.h  ui_spellbook.h  ui_spells.h  ui_stats.h  ui_target_info.h  ui_toolbar.h  ui_unit_control.h  ui_unit_control.hpp  unit_frames.h  unit_frames.h~
src/Utils/: CMakeLists.txt  base_structs.h  dynamic_quad_tree.h  quad_tree.h  quad_tree_controller.h  raycast.h  timer.h  utilities.h
src/Video/: CMakeLists.txt  video.h
(+4206 files in other folders)
