add_subdirectory(Debug)
add_subdirectory(Game)
add_subdirectory(Graphics)
add_subdirectory(Input)
add_subdirectory(Maps)
add_subdirectory(Components)
add_subdirectory(Objects)
add_subdirectory(Sounds)
add_subdirectory(SQLite)
add_subdirectory(UI)
add_subdirectory(Utils)
add_subdirectory(Video)
add_subdirectory(Audio)
add_subdirectory(Spells)
add_subdirectory(Environment)
